# evoport

./: .gitignore  README.md  pyproject.toml  research_ideas.txt  text.ipynb
data/: generate_prices.py  prices.csv
examples/: backtest.ipynb  cma_es.ipynb  losses.ipynb  populations.ipynb
utils/: backtest.py  evolution.py
utils/domination/: cone.py  epsilon.py  lorenz.py  pareto.py
utils/enums/: data.py
utils/loss/: ann_downside_var.py  cvar.py  max_dd.py  mean_ret.py  sharpe.py  sortino.py  template.py  var.py  win_loss.py  win_rate.py
utils/populations/: implementations.py  population_template.py
