[project]
name = "evoport"
version = "0.1.0"
description = "Portfolio optimisation and construction toolkit"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "cvxpy>=1.5",
    "yfinance>=0.2.36",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
